# BMO

./: .gitignore  README.md  Tree.md  main.py  pyproject.toml
configs/: config.yaml
docs/Version1/: RoadMap.docx
scripts/: test_microphone.py  test_microphone_dns.py  test_realtime_dns.py
src/core/: brain.py  ears.py  mouth.py
