[project]
name = "bmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepfilternet>=0.5.6",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
]
