[project]
name = "bmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "piper-tts>=1.4.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
